feat: add route findUserById
